# offline-xulruntimes-translations-installer

./: Makefile.in  README.md  configure.in  info.xml.in
programs/: xulruntimes_fr_install
